# tarang-cli

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
configs/agents/: architect.yaml  coder.yaml  explorer.yaml  file_worker.yaml  orchestrator.yaml  planner.yaml  shell_worker.yaml  worker_pool.yaml
configs/gateways/: openai.yaml
configs/memory/: shared.yaml
configs/planners/: chat.yaml  react.yaml  router.yaml
configs/policies/: default_termination.yaml
configs/subscribers/: console.yaml  phoenix.yaml
configs/tools/: edit_file.yaml  find_files.yaml  grep.yaml  list_files.yaml  read_file.yaml  search_files.yaml  shell.yaml  worker_edit_file.yaml  worker_list_files.yaml  worker_read_file.yaml  worker_write_file.yaml  write_file.yaml
docs/: FUTURE-interactive-tui.md  PRD-8-hybrid-architecture.md
src/tarang/: __init__.py  cli.py  context_collector.py  models.py  orchestrator.py  stream.py
src/tarang/agents/: __init__.py
src/tarang/client/: __init__.py  api_client.py  auth.py
src/tarang/context/: __init__.py  bm25.py  chunker.py  doc_loader.py  graph.py  indexer.py  retriever.py  skeleton.py
src/tarang/core/: __init__.py  auth.py  config.py  init.py  quick.py  session.py  status.py
src/tarang/deployment/: __init__.py  factory.py  registry.py
src/tarang/executor/: __init__.py  diff_apply.py  linter.py
src/tarang/memory/: __init__.py  project_memory.py
src/tarang/state/: __init__.py  execution_state.py
src/tarang/tools/: __init__.py  diff_applicator.py  file_tools.py  shadow_linter.py  shell_tools.py  skeleton.py  validation_tools.py
src/tarang/ui/: __init__.py  console.py  diff_viewer.py  formatter.py  keyboard.py  terminal_ui.py
src/tarang/utils/: __init__.py
src/tarang/ws/: __init__.py  client.py  executor.py  handlers.py
