[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarang"
version = "0.1.0"
description = "AI-powered coding assistant - Privacy-first, high-accuracy code generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tarang Team", email = "hello@devtarang.ai" }
]
keywords = ["ai", "coding", "assistant", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ast = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
]

[project.scripts]
tarang = "tarang.cli:main"

[project.urls]
Homepage = "https://devtarang.ai"
Documentation = "https://docs.devtarang.ai"
Repository = "https://github.com/tarang-ai/tarang-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tarang"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
